--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,30 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+# MacOS
+.DS_Store
+
+# IDEA
+**/.idea/
+**/*.iml
+
+# NetBeans
+**/nbproject/
+**/nb*.xml
+
+# Gradle
+**/.gradle/
+**/gradle/
+
+**/build/
+**/.build/
+**/out/
+**/.out/
+**/target/
+**/.target/
+
+**/.vertx/
+
+.gradle/
+.nb-gradle/
+
