--- a/pom.xml
+++ b/pom.xml
@@ -40,8 +40,31 @@
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>                
-                    <compilerArgument>-proc:none</compilerArgument>
+                    <!--<compilerArgument>-proc:none</compilerArgument>-->
                 </configuration>
+                <executions>                    
+                    <execution>
+                        <id>default-compile</id>
+                        <goals>
+                            <goal>compile</goal>
+                        </goals>
+                        <configuration>
+                            <proc>none</proc>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>compile-with-annotations-processor</id>
+                        <goals>
+                            <goal>compile</goal>
+                        </goals>
+                        <configuration>
+                            <proc>only</proc>
+                            <generatedSourcesDirectory>
+                                ${project.build.directory}/generated-test-sources/test-annotations
+                            </generatedSourcesDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -73,13 +96,26 @@
         <dependency>            
             <groupId>io.vertx</groupId>
             <artifactId>vertx-core</artifactId>
-            <version>[3.3.0,3.5.1]</version>
+            <version>[3.5.0,3.5.4]</version>
         </dependency>
         <dependency>            
             <groupId>com.squareup</groupId>
             <artifactId>javapoet</artifactId>
             <version>1.9.0</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-unit</artifactId>
+            <version>[3.5.0,3.5.4]</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+            <type>jar</type>
         </dependency>
     </dependencies>
 </project>
