--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.github.nsforth</groupId>
     <artifactId>vxrifa</artifactId>
-    <version>1.3.1</version>
+    <version>1.4.0</version>
     <packaging>jar</packaging>
     <name>VxRifa</name>
     <description>Object-oriented reactive programming for Vert.X</description>
@@ -29,18 +29,16 @@
     </developers>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
     </properties> 
     <build>
         <plugins>
-            <plugin>    
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.0</version>
+                <!--<compilerArgument>-proc:none</compilerArgument>-->
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>                
-                    <!--<compilerArgument>-proc:none</compilerArgument>-->
+                    <release>11</release>  <!--or <release>10</release>-->
                 </configuration>
                 <executions>                    
                     <execution>
@@ -96,18 +94,18 @@
         <dependency>            
             <groupId>io.vertx</groupId>
             <artifactId>vertx-core</artifactId>
-            <version>[3.6.0,3.6.4]</version>
+            <version>[3.9.0,3.9.2]</version>
         </dependency>
         <dependency>            
             <groupId>com.squareup</groupId>
             <artifactId>javapoet</artifactId>
-            <version>1.11.1</version>
+            <version>1.13.0</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>io.vertx</groupId>
             <artifactId>vertx-unit</artifactId>
-            <version>[3.6.0,3.6.4]</version>
+            <version>[3.9.0,3.9.2]</version>
             <scope>test</scope>
         </dependency>
         <dependency>
